02-deployment/overlay/ingress/single/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo-a.cl.monach.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: dev-nginx
            port: 
              number: 80
